// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart getCircle should get return a path 1`] = `
<path
  className="theme-tc-pie-chart-color-red tc-pie-chart-color-red"
  d="M0,0Z"
  transform="translate(10,10)"
/>
`;

exports[`PieChart getCircle should get return a path with hover color 1`] = `
<path
  className="theme-tc-pie-chart-color-red tc-pie-chart-color-red"
  d="M0,0Z"
  transform="translate(10,10)"
/>
`;

exports[`PieChart getEmptyPartCircle should get return a path for the rest 1`] = `
<path
  className="theme-tc-pie-chart-color-alto tc-pie-chart-color-alto"
  d="M0,0Z"
  transform="translate(10,10)"
/>
`;

exports[`PieChart snapshots render should render a PieChart 1`] = `
<span
  className="theme-tc-pie-chart tc-pie-chart"
>
  <svg
    className="theme-tc-pie-chart-graph tc-pie-chart-graph"
    height={20}
    style={
      Object {
        "height": 20,
        "width": 20,
      }
    }
    width={20}
  >
    <path
      className="theme-tc-pie-chart-color-rio-grande tc-pie-chart-color-rio-grande"
      d="M1.0798635081746981,-8.934981522292736A9,9,0,0,1,3.2679771569343448,8.385721513486798L2.5137114511013143,5.448050544974975A6,6,0,0,0,1.079863508174698,-5.902024635979812Z"
      transform="translate(10,10)"
    />
    <path
      className="theme-tc-pie-chart-color-chestnut-rose tc-pie-chart-color-chestnut-rose"
      d="M1.1761019362637408,8.922823781489617A9,9,0,0,1,-1.734049908655706,8.83136857538463L-0.7968146875784861,5.946855165014463A6,6,0,0,0,0.4218362304307106,5.985152812977795Z"
      transform="translate(10,10)"
    />
    <path
      className="theme-tc-pie-chart-color-lightning-yellow tc-pie-chart-color-lightning-yellow"
      d="M-3.788072360973488,8.163976224121965A9,9,0,0,1,-4.378222438590741,7.863279740554863L-2.7239429984372805,5.346039145130208Z"
      transform="translate(10,10)"
    />
    <path
      className="theme-tc-pie-chart-color-slate-gray tc-pie-chart-color-slate-gray"
      d="M-6.125478298028102,6.593824051367063A9,9,0,0,1,-6.593824051367061,6.125478298028103L-4.242640687119285,4.242640687119286Z"
      transform="translate(10,10)"
    />
    <path
      className="theme-tc-pie-chart-color-silver-chalice tc-pie-chart-color-silver-chalice"
      d="M-7.863279740554862,4.3782224385907424A9,9,0,0,1,-8.163976224121967,3.7880723609734854L-5.346039145130207,2.7239429984372814Z"
      transform="translate(10,10)"
    />
    <path
      className="theme-tc-pie-chart-color-alto tc-pie-chart-color-alto"
      d="M-8.83136857538463,1.7340499086557037A9,9,0,0,1,-1.0798635081746992,-8.934981522292736L-1.0798635081746997,-5.902024635979812A6,6,0,0,0,-5.946855165014464,0.7968146875784833Z"
      transform="translate(10,10)"
    />
  </svg>
  <div
    className="theme-tc-pie-chart-label tc-pie-chart-label theme-tc-pie-chart-color-rio-grande tc-pie-chart-color-rio-grande"
  >
    50%
  </div>
</span>
`;

exports[`PieChart snapshots render should render a Skeleton when the state is loading 1`] = `
<span
  className="theme-tc-pie-chart-loading tc-pie-chart-loading"
>
  <Translate(Skeleton)
    className="theme-tc-pie-chart-loading-circle tc-pie-chart-loading-circle"
    height={20}
    type="circle"
    width={20}
  />
  <Translate(Skeleton)
    size="small"
    type="text"
  />
</span>
`;
